docx: fdo#43093 fdo#44029 fix the alignment when the paragraph are RTL

this will fix the alignment for RTL paragraph when import/export MS docx file.
the alignment should be exchange when the paragraph are RTL.
it will also fix text direction export for RTL paragraph.

Change-Id: I5fe55205677d6e12142e398570cba78094705692